force-app/main/default/objects/TimeTrade_SF1__TimeTrade_Workflow_Criteria__c/TimeTrade_SF1__TimeTrade_Workflow_Criteria__c.object-meta.xml
<CustomObject>
    <label>TimeTrade Routing Question</label>
    <nameField>
        <label>Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TimeTrade Routing Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>