force-app/main/default/objects/TimeTrade_SF1__TimeTrade_Workflow_Criteria__c/fields/TimeTrade_SF1__Answer_Placeholder_Text__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Answer_Placeholder_Text__c</fullName>
    <defaultValue>&quot;--None--&quot;</defaultValue>
    <description>The placer holder text which needs to show up as the default value on cts workflow page load</description>
    <inlineHelpText>Please enter the place holder text which needs to show up as the default answer</inlineHelpText>
    <label>Answer Placeholder Text</label>
    <length>30</length>
    <type>Text</type>
</CustomField>