force-app/main/default/objects/TimeTrade_SF1__TimeTrade_Workflow_Criteria__c/fields/TimeTrade_SF1__Controlling_Field_Criteria__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Controlling_Field_Criteria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Controlling Field Question</label>
    <referenceTo>TimeTrade_SF1__TimeTrade_Workflow_Criteria__c</referenceTo>
    <relationshipLabel>TimeTrade Routing Questions</relationshipLabel>
    <relationshipName>TimeTrade_Workflow_Criteria</relationshipName>
    <type>Lookup</type>
</CustomField>