force-app/main/default/objects/TimeTrade_SF1__TimeTrade_Workflow_Criteria__c/fields/TimeTrade_SF1__Controlling_Field_Exists__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Controlling_Field_Exists__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Controlling Field?</label>
    <type>Checkbox</type>
</CustomField>