force-app/main/default/objects/TimeTrade_SF1__TimeTrade_Workflow_Criteria__c/fields/TimeTrade_SF1__Criteria_Order__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Criteria_Order__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Order</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>