force-app/main/default/objects/TimeTrade_SF1__TimeTrade_Workflow_Criteria__c/fields/TimeTrade_SF1__Criteria_Type__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Criteria_Type__c</fullName>
    <label>Question Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Picklist</fullName>
                <default>true</default>
                <label>Picklist</label>
            </value>
            <value>
                <fullName>Object</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>