force-app/main/default/objects/TimeTrade_SF1__TimeTrade_Workflow_Criteria__c/fields/TimeTrade_SF1__Description_Text__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Description_Text__c</fullName>
    <label>Field Label</label>
    <type>TextArea</type>
</CustomField>