force-app/main/default/objects/TimeTrade_SF1__TimeTrade_Workflow_Criteria__c/fields/TimeTrade_SF1__Form_Control_Type__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Form_Control_Type__c</fullName>
    <label>Form Control Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DropDown</fullName>
                <default>true</default>
                <label>DropDown</label>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Multi-Select List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>