force-app/main/default/objects/TimeTrade_SF1__TimeTrade_Workflow_Criteria__c/fields/TimeTrade_SF1__Is_Multi_select__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Is_Multi_select__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multiple Selection</label>
    <type>Checkbox</type>
</CustomField>