force-app/main/default/objects/TimeTrade_SF1__TimeTrade_Workflow_Criteria__c/fields/TimeTrade_SF1__Is_Required__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Is_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this a compulsory question?</description>
    <inlineHelpText>Is this a compulsory question?</inlineHelpText>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>