force-app/main/default/objects/TimeTrade_SF1__TimeTrade_Workflow_Criteria__c/fields/TimeTrade_SF1__Pass_to_Invitation__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Pass_to_Invitation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pass to Invitation</label>
    <type>Checkbox</type>
</CustomField>