force-app/main/default/objects/TimeTrade_SF1__TimeTrade_Workflow_Criteria__c/fields/TimeTrade_SF1__Picklist_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Picklist_Field_Name__c</fullName>
    <label>Picklist Field Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>