force-app/main/default/objects/TimeTrade_SF1__TimeTrade_Workflow_Criteria__c/fields/TimeTrade_SF1__Question_ID__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Question_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Question ID</label>
    <type>Text</type>
</CustomField>