force-app/main/default/objects/TimeTrade_SF1__TimeTrade_Workflow_Criteria__c/fields/TimeTrade_SF1__Schedule_Workflow__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Schedule_Workflow__c</fullName>
    <label>TimeTrade Routing Questionnaire</label>
    <referenceTo>TimeTrade_SF1__TimeTrade_Schedule_Workflow__c</referenceTo>
    <relationshipName>TimeTrade_Workflow_Criteria</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>