force-app/main/default/objects/TimeTrade_SF1__TimeTrade_Workflow_Criteria__c/fields/TimeTrade_SF1__Search_Object_Field__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Search_Object_Field__c</fullName>
    <label>Search Object Field</label>
    <length>128</length>
    <type>Text</type>
</CustomField>