force-app/main/default/objects/TimeTrade_SF1__TimeTrade_Workflow_Criteria__c/fields/TimeTrade_SF1__Visible__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Visible__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Visible</label>
    <type>Checkbox</type>
</CustomField>