force-app/main/default/objects/TimeTrade_SF1__TimeTrade_Workflow_Criteria__c/validationRules/TimeTrade_SF1__Check_if_controlling_field_is_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>TimeTrade_SF1__Check_if_controlling_field_is_blank</fullName>
    <active>false</active>
    <description>Check if the controlling field exists is true and the field is blank</description>
    <errorConditionFormula>AND( TimeTrade_SF1__Controlling_Field_Exists__c ==true, ISBLANK(TimeTrade_SF1__Controlling_Field_Criteria__c ))</errorConditionFormula>
    <errorMessage>Please populate the Controlling field criteria.</errorMessage>
</ValidationRule>