force-app/main/default/objects/TimeTrade_SF1__TimeTrade_Workflow_Criteria__c/validationRules/TimeTrade_SF1__Ensure_Object_name_of_dependent_picklist.validationRule-meta.xml
<ValidationRule>
    <fullName>TimeTrade_SF1__Ensure_Object_name_of_dependent_picklist</fullName>
    <active>false</active>
    <errorConditionFormula>AND (
  TimeTrade_SF1__Controlling_Field_Exists__c ==true,
  NOT(ISNULL(TimeTrade_SF1__Controlling_Field_Criteria__c)),
  TimeTrade_SF1__Search_Object_Name__c!=
  TimeTrade_SF1__Controlling_Field_Criteria__r.TimeTrade_SF1__Search_Object_Name__c 
)</errorConditionFormula>
    <errorMessage>Please ensure that the controlling field object is same as the picklist object.</errorMessage>
</ValidationRule>